# routes/api.php
@@ -1,22 +1,17 @@
 <?php
 
+use App\Http\Controllers\Api\V1\Auth\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\Api\AuthController;
 
-// Rutas públicas
-Route::post('/login', [AuthController::class, 'login']);
 
-// Rutas protegidas
-Route::middleware('auth:sanctum')->group(function () {
-    Route::get('/user', function (Request $request) {
-        return $request->user();
+// Rutas de autenticación v1
+Route::prefix('v1')->group(function () {
+
+    Route::post('/login', [AuthController::class, 'login']);
+
+    Route::middleware('auth:sanctum')->group(function () {
+        Route::post('/logout', [AuthController::class, 'logout']);
     });
     
-    Route::post('/logout', [AuthController::class, 'logout']);
-    
-    Route::post('/tokens/create', function (Request $request) {
-        $token = $request->user()->createToken($request->token_name);
-        return ['token' => $token->plainTextToken];
-    });
 });
